--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Tastes2Plate</string>
+
+    <string name="facebook_app_id">752784741945467</string>
+    <string name="facebook_client_token">abaa9a413c0a95d9112b2432cabed1e7</string>
+    <string name="facebook_pixel_id">1667197037079128</string>
+    <string name="fb_login_protocol_scheme">fb[752784741945467]</string>
 </resources>
